js/js.translator/testData/incremental/invalidation/suspendInterfaceWithDefaultParams/lib1/l1I.0.kt
interface InterfaceA {
    suspend fun functionA(x: Int, s: String, b: Boolean? = null): Int
}

fun function1(): Int = 0
